[gd_scene format=3 uid="uid://r6l2lwvbok18"]

[ext_resource type="Script" uid="uid://ihep336x6bpj" path="res://bullet/bullet.gd" id="1_f7l2a"]
[ext_resource type="Texture2D" uid="uid://u425shvi7j5m" path="res://bullet/bullet_gp.png" id="2_bpafg"]
[ext_resource type="Script" uid="uid://dfu1hk8ne0eau" path="res://component/movement_component.gd" id="3_gv2re"]
[ext_resource type="Script" uid="uid://bk4q82ppmb7m" path="res://component/target_component.gd" id="4_5xe1e"]
[ext_resource type="Script" uid="uid://bjhx4isrdnkyh" path="res://component/hurtbox_component.gd" id="5_f4wn0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ynyjt"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3udht"]
radius = 16.0

[node name="FastBullet" type="CharacterBody2D" unique_id=496901937]
collision_layer = 4
script = ExtResource("1_f7l2a")

[node name="Icon" type="Sprite2D" parent="." unique_id=362001725]
texture = ExtResource("2_bpafg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=954772255]
shape = SubResource("CircleShape2D_ynyjt")

[node name="MovementCompenent" type="Node" parent="." unique_id=124393932 node_paths=PackedStringArray("_body")]
script = ExtResource("3_gv2re")
_body = NodePath("..")
speed = 528.0
metadata/_custom_type_script = "uid://dfu1hk8ne0eau"

[node name="TargetComponent" type="Node" parent="." unique_id=1745173053 node_paths=PackedStringArray("_body")]
script = ExtResource("4_5xe1e")
_body = NodePath("..")

[node name="HurtboxComponent" type="Area2D" parent="." unique_id=206779997]
collision_layer = 4
collision_mask = 3
script = ExtResource("5_f4wn0")
metadata/_custom_type_script = "uid://bjhx4isrdnkyh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" unique_id=417156219]
shape = SubResource("CircleShape2D_3udht")
debug_color = Color(0.8409385, 0.3572527, 0.37389633, 0.41960785)

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="." unique_id=1172766195]
